--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "my-app",
+  "name": "usomi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
-    "next": "15.4.6",
+    "next": "15.4.7",
     "pnpm": "^10.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -22,6 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "husky": "^9.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
